Update CSS styles and remove unused code

--- a/AtsTemplates/tv.html
+++ b/AtsTemplates/tv.html
@@ -166,19 +166,27 @@
             margin: .5rem;
             color: wheat;
         }
+
+        /* svg {
+		display: block;
+		width: 3em;
+		height: 4em;
+		fill: brown;
+	} */
         .iconDiv {
-		display: flex;
-		flex-direction: row;
-		justify-content: center;
-		align-items: center;
-		margin-left: 1em;
-	}
-	.movicon {
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		margin-right: 1em;
-	}
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            margin-left: 1em;
+        }
+
+        .movicon {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin-right: 1em;
+        }
     </style>
 </head>
 
@@ -186,7 +194,6 @@
     <main>
         <div class="mainDiv">
             <h1 class="title">MvTv</h1>
-
             <div class="controls">
                 <div class="movicon">
                     <a href="/"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512">
@@ -216,54 +223,24 @@
                     </svg>
                 </div>
                 <div class="movicon">
-                    <a href="/TVShows/tvshows"
-                        ><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512">
+                    <a href="/TVShows/tvshows"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512">
                             <path
-                                d="M64 64V352H576V64H64zM0 0H64 576h64V64 352v64H576 64 0V352 64 0zM128 448H512h32v64H512 128 96V448h32z"
-                            />
-                        </svg></a
-                    >
+                                d="M64 64V352H576V64H64zM0 0H64 576h64V64 352v64H576 64 0V352 64 0zM128 448H512h32v64H512 128 96V448h32z" />
+                        </svg></a>
                 </div>
             </div>
+
             <div class="mov-wrapper">
                 <div class="mov-grid-item">Action</div>
-                <div class="mov-grid-item">Arnold</div>
-                <div class="mov-grid-item">Bruce Lee</div>
-                <div class="mov-grid-item">Bruce Willis</div>
-                <div class="mov-grid-item">Buzz</div>
-                <div class="mov-grid-item">Cartoons</div>
-                <div class="mov-grid-item">Charlie Brown</div>
-                <div class="mov-grid-item">Chuck Norris</div>
                 <div class="mov-grid-item">Comedy</div>
                 <div class="mov-grid-item">Drama</div>
-                <div class="mov-grid-item">Documentary</div>
                 <div class="mov-grid-item">Fantasy</div>
-                <div class="mov-grid-item">Godzilla</div>
-                <div class="mov-grid-item">Harry Potter</div>
-                <div class="mov-grid-item">Indiana Jones</div>
-                <div class="mov-grid-item">James Bond</div>
-                <div class="mov-grid-item">John Wayne</div>
-                <div class="mov-grid-item">John Wick</div>
-                <div class="mov-grid-item">Jurassic Park</div>
-                <div class="mov-grid-item">Kings Man</div>
-                <div class="mov-grid-item">Men In Black</div>
-                <div class="mov-grid-item">Minions</div>
-                <div class="mov-grid-item">Misc</div>
-                <div class="mov-grid-item">Nicolas Cage</div>
-                <div class="mov-grid-item">Oldies</div>
-                <div class="mov-grid-item">Pirates</div>
-                <div class="mov-grid-item">Riddick</div>
-                <div class="mov-grid-item">SciFi</div>
-                <div class="mov-grid-item">Stalone</div>
-                <div class="mov-grid-item">Star Trek</div>
+                <div class="mov-grid-item">Star Trel</div>
                 <div class="mov-grid-item">Star Wars</div>
-                <div class="mov-grid-item">Super Heroes</div>
-                <div class="mov-grid-item">Tinker Bell</div>
-                <div class="mov-grid-item">Tom Cruise</div>
-                <div class="mov-grid-item">Transformers</div>
-                <div class="mov-grid-item">Tremors</div>
-                <div class="mov-grid-item">The Rock</div>
-                <div class="mov-grid-item">XMen</div>
+                <div class="mov-grid-item">SciFi</div>
+                <div class="mov-grid-item">Science</div>
+                <div class="mov-grid-item">MCU</div>
+                <div class="mov-grid-item">Western</div>
             </div>
         </div>
     </main>
