Update HTML titles and descriptions

--- a/AtsTemplates/index.html
+++ b/AtsTemplates/index.html
@@ -1,12 +1,12 @@
-{{define "ats_index" }}
+{{define "index" }}
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width" />
-    <meta name="description" content="Alpha Tree Service.">
-    <title>Alpha Tree Service</title>
+    <meta name="description" content="MvTv">
+    <title>MvTv</title>
     <!-- <link rel="stylesheet" href="/assets/main.css">
     <link rel="stylesheet" href="/assets/index.css"> -->
     <script src="/assets/htmx.min.js"></script>
@@ -144,7 +144,7 @@
             color: #444;
         }
 
-        .box {
+        /* .box {
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -155,7 +155,7 @@
             padding: 20px;
             font-size: 1.5rem;
             margin: .5rem
-        }
+        } */
 
         .mov-grid-item {
             background-color: rgb(2, 3, 71);
@@ -216,7 +216,7 @@
                     </svg>
                 </div>
                 <div class="movicon">
-                    <a href="/TVShows/tvshows"
+                    <a href="/tv"
                         ><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512">
                             <path
                                 d="M64 64V352H576V64H64zM0 0H64 576h64V64 352v64H576 64 0V352 64 0zM128 448H512h32v64H512 128 96V448h32z"
