--- a/AtsTemplates/tv.html
+++ b/AtsTemplates/tv.html
@@ -1,12 +1,12 @@
-{{define "ats_index" }}
+{{define "tv" }}
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width" />
-    <meta name="description" content="Alpha Tree Service.">
-    <title>Alpha Tree Service</title>
+    <meta name="description" content="MvTv">
+    <title>MvTv</title>
     <!-- <link rel="stylesheet" href="/assets/main.css">
     <link rel="stylesheet" href="/assets/index.css"> -->
     <script src="/assets/htmx.min.js"></script>
